--- a/teckels/main/templates/about.html
+++ b/teckels/main/templates/about.html
@@ -69,36 +69,36 @@
 			</div>
 			<div class="col-md-6 lt">
 				<div class="few-words">
-					
 						<img src="{% static '../media/images/about/4.jpg' %}" alt="" title="" class="img-responsive" />
 						<div class="clearfix"></div>
 				</div>
 			</div>
-		<div class="clearfix"></div>
+			<div class="clearfix"></div>
 
-		<div class="row" style="margin-top:15px">
-			<div class='list-group gallery'>
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/1.jpg' %}">
-	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/1.jpg' %}" />
-	                </a>
-	            </div> <!-- col-6 / end -->
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/3.jpg' %}">
-	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/3.jpg' %}" />
-	                </a>
-	            </div> <!-- col-6 / end -->
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/5.jpg' %}">
-	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/5.jpg' %}" />
-	                </a>
-	            </div> <!-- col-6 / end -->
-	            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
-	                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/6.jpg' %}">
-	                    <img class="img-responsive" alt="" src="{% static '../media/images/about/6.jpg' %}" />
-	                </a>
-	            </div> <!-- col-6 / end -->
-	        </div> <!-- list-group / end -->
+			<div class="row" style="margin-top:15px">
+				<div class='list-group gallery'>
+		            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+		                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/1.jpg' %}">
+		                    <img class="img-responsive" alt="" src="{% static '../media/images/about/1.jpg' %}" />
+		                </a>
+		            </div> <!-- col-6 / end -->
+		            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+		                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/3.jpg' %}">
+		                    <img class="img-responsive" alt="" src="{% static '../media/images/about/3.jpg' %}" />
+		                </a>
+		            </div> <!-- col-6 / end -->
+		            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+		                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/5.jpg' %}">
+		                    <img class="img-responsive" alt="" src="{% static '../media/images/about/5.jpg' %}" />
+		                </a>
+		            </div> <!-- col-6 / end -->
+		            <div class='col-sm-4 col-xs-6 col-md-3 col-lg-3'>
+		                <a class="thumbnail fancybox" rel="ligthbox" href="{% static '../media/images/about/6.jpg' %}">
+		                    <img class="img-responsive" alt="" src="{% static '../media/images/about/6.jpg' %}" />
+		                </a>
+		            </div> <!-- col-6 / end -->
+		        </div> <!-- list-group / end -->
+			</div>
 		</div>
 	</div>	
 {% endblock main %}
